# tradicao

./: main.py  pyproject.toml  teste.py
data/: extractor.py  processor_vendas.py
modules/: api_requests.py  data_processing.py  database_service.py  main.py
modules/models/: cliente.py  item_venda.py  pagamento.py  venda.py
services/: data_processor.py  database_service.py
