[tool.poetry]
name = "tradicao"
version = "0.1.0"
description = ""
authors = ["Matheus Pinter"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.3"
black = "^24.10.0"
flake8 = "^7.1.1"
mypy = "^1.13.0"
pydantic = "^2.10.0"
supabase = "^2.10.0"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
types-requests = "^2.32.0.20241016"
pandas-stubs = "^2.2.3.241009"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
